# File-Launch-App

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_config_dir.rs  main.rs  write_config.rs
src/api/: audio.ts
src/components/: Header.tsx  NoBaseFolderAlert.tsx  SideBar.tsx  SignIn.tsx
src/components/Buttons/: ButtonMain.tsx  DropboxSignInBtn.tsx  GoogleSignInBtn.tsx
src/components/Layout/: EmailTemplates.tsx  Header.tsx  RecentFiles.tsx  RecentFiles_test_Jun30.tsx  Recipients.tsx  Settings.tsx  SideBar.tsx  SignIn.tsx  Stats.tsx  UserProfile.tsx
src/components/Pages/: FormatFiles.tsx  SignIn.tsx  UserProfile.tsx
src/components/ui/: audioslider.tsx  button-loading.tsx  headericon.tsx  select.tsx  shortcuts-table.tsx  slider.tsx  tooltipicon.tsx
src/config/: oauth.ts  types.ts
src/context/: AuthContext.tsx  ThemeContext.tsx
src/redux/: provider.tsx  store.ts
src/redux/features/: baseFolderStatus-slice.ts  componentInView-slice.ts.ts  currentFile-slice.ts  navigation-slice.ts  recentFiles-slice.ts
src/redux/middleware/: fetchFilesMiddelware.ts
src/services/: firebase.ts
src/services/auth/: callback.template.ts  index.ts
src/services/firebase/: app.ts  auth.ts
src/services/supabase/: DropboxSignInBtn.tsx  GoogleSignInBtn.tsx  auth.tsx  supabaseClient.ts
src/utils/: appConfigStore.ts  audioUtils.ts  baseFolderCheck.ts  baseFolderWatcher.ts
(+27 files in other folders)
